APP-1497 Fixing code after PR comments
