# helpdesk-service/helpdesk-service-server/src/main/java/org/symphonyoss/symphony/bots/helpdesk/service/makerchecker/dao/memory/InMemoryMakercheckerDAO.java
@@ -3,6 +3,8 @@ package org.symphonyoss.symphony.bots.helpdesk.service.makerchecker.dao.memory;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.stereotype.Component;
 import org.symphonyoss.symphony.bots.helpdesk.service.makerchecker.dao.MakercheckerDao;
+import org.symphonyoss.symphony.bots.helpdesk.service.makerchecker.exception
+    .MakercheckerNotFoundException;
 import org.symphonyoss.symphony.bots.helpdesk.service.memory.MemoryCondition;
 import org.symphonyoss.symphony.bots.helpdesk.service.model.Makerchecker;
 
@@ -28,10 +30,10 @@ public class InMemoryMakercheckerDAO implements MakercheckerDao {
   public Makerchecker updateMakerchecker(String id, Makerchecker makerchecker) {
     Makerchecker saved = getMakerchecker(id);
     if (saved == null) {
-      throw new RuntimeException("");
+      throw new MakercheckerNotFoundException(makerchecker.getId());
     }
 
-    saved.setAgentId(makerchecker.getAgentId());
+    saved.setCheckerId(makerchecker.getCheckerId());
     saved.state(makerchecker.getState());
 
     return createMakerchecker(saved);
